--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Book Recommender System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
-<body>
-
+<body style="background-color: black">
+    <nav class="navbar" style="background-color:#00a65a">
+        <a class="navbar-brand" href="#">My book recommender</a>
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Recommend</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 style="color: white;font-size: 50px">Top 50 Books</h1>
+            </div>
+            <div class="col-3">
+                <div
+            </div>
+        </div>
+    </div>
 </body>
 </html>
