completed the recommendation system.Fully working web app

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
     <nav class="navbar navbar-inverse custom-navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">📚 My Book Recommender</a>
+      <a class="navbar-brand" href="/">📚 My Book Recommender</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
